--- a/todo_FE/package.json
+++ b/todo_FE/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "nodemon": "^2.0.18"
   }
 }
