--- a/todo_FE/package.json
+++ b/todo_FE/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.18"
   }
 }
