--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
     "name": "whattodo",
     "version": "1.0.0",
     "dependencies": {
+        "axios": "^0.27.2",
         "body-parser": "^1.20.0",
         "cors": "^2.8.5",
         "express": "^4.16.4",
+        "express-mysql-session": "^2.1.8",
+        "express-session": "^1.17.3",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
         "nodemon": "^2.0.19",
         "yarn": "^1.22.19"
     },
