--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
         "nodemon": "^2.0.19",
+        "save": "^2.5.0",
         "yarn": "^1.22.19"
     },
     "devDependencies": {
-        "concurrently": "^4.1.2"
+        "concurrently": "^7.3.0"
     },
     "scripts": {
         "start": "node server.js",
