--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "mysql2": "^2.3.3",
         "nodemon": "^2.0.19",
         "react-modal": "^3.15.1",
+        "redux": "^4.2.0",
         "save": "^2.5.0",
         "styled-components": "^5.3.5",
         "yarn": "^1.22.19"
